// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APD files endpoints Get a file associated with an APD | GET /apds/:id/files/:fileID when authenticated as a user with permission with a non-existant apd ID 1`] = `"Files does not exist"`;

exports[`APD files endpoints Get a file associated with an APD | GET /apds/:id/files/:fileID when authenticated as a user with permission with a valid request 1`] = `"hello, this is downloaded"`;

exports[`APD files endpoints Get a file associated with an APD | GET /apds/:id/files/:fileID when authenticated as a user with permission with an APD in a state other than the user's state 1`] = `"Files does not exist"`;

exports[`APD files endpoints Get a file associated with an APD | GET /apds/:id/files/:fileID when authenticated as a user with permission with an APD that is not associated with the file 1`] = `"Files does not exist"`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a non-existant apd ID 1`] = `"Requested object does not exist"`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a text-based file 1`] = `Object {}`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a valid request (gif) 1`] = `
Object {
  "url": "/apds/4001/files/5bc8062f3da37dd71f5b23810bd26852560cd61ee7c64bfc45ef813f12669169",
}
`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a valid request (jpg) 1`] = `
Object {
  "url": "/apds/4001/files/df36235c0f411edec03633f6cab375a74f26b9e08e1d647df3edd44802366dbb",
}
`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a valid request (tiff) 1`] = `
Object {
  "url": "/apds/4001/files/1a880c01e883e032ae9b31465b40b0c45e2028f0d98d8dc48aa503d0a8cba326",
}
`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with an APD in a state other than the user's state 1`] = `"User does not have access to the APD"`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with an APD that is not in draft 1`] = `"APD status is not editable"`;
